src/test/deca/context/invalid/op_bool_string.deca
//ERROR :3:
{
println("r" &&"klf");

}